--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ form .btn {
 .asset {
   width: 40%;
   display: inline-block;
-  margin: 0 2.5% 2.5% 0;
+  margin: 0 2.5% 0 2.5%;
   font-size: .9rem;
 }
 
